Fix warning emitted by JRuby when running asciidoctor tasks