@@ -62,6 +62,11 @@ def asciidocHtml = tasks.register('asciidocHtml', FbAsciidocHtmlTask) {
             }
         }
     }
+    forkOptions {
+        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+            jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
+        }
+    }
 }
 
 def asciidocPdf = tasks.register('asciidocPdf', FbAsciidocPdfTask) {
@@ -76,6 +81,11 @@ def asciidocPdf = tasks.register('asciidocPdf', FbAsciidocPdfTask) {
             pdf {
                 version '2.1.6'
             }
+        }
+    }
+    forkOptions {
+        if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+            jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
         }
     }
 }
@@ -112,6 +122,11 @@ def asciidocDocbook = tasks.register('asciidocDocbook', AsciidocToDocbook) {
                     duplicatesStrategy DuplicatesStrategy.EXCLUDE
                 }
             }
+        }
+    }
+    forkOptions {
+        if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+            jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
         }
     }
 }
